--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -125,7 +125,7 @@
 
         //console.log(username,password,nickname,phone,email,sex,birthday,wechat,qq,weibo,question,answer);
         $.ajax({
-            url: "/loginUserForAjax",
+            url: "/loginUserByAjax",
             dataType: "JSON",
             data: {"username": username, "password": password},
             contentType: "application/json; charset=utf-8",
