--- a/src/main/resources/templates/registered.html
+++ b/src/main/resources/templates/registered.html
@@ -162,7 +162,7 @@
 
         //console.log(username,password,nickname,phone,email,sex,birthday,wechat,qq,weibo,question,answer);
         $.ajax({
-            url: "/addUserForAjax",
+            url: "/registeredUserByAjax",
             dataType: "JSON",
             data: {
                 "username": username, "password": password, "nickname": nickname, "phone": phone,
