测试QQ快速登录

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -116,6 +116,7 @@
                required="required"/>
         <button onclick="login()">登录</button>
         <a class="login-registered" href="/registered">注册</a>
+        <a class="login-registered" href="/qqlogin/loginByQQ">qq快速登录</a>
     </div>
 </div>
 <script>
