--- a/src/main/resources/templates/registered.html
+++ b/src/main/resources/templates/registered.html
@@ -108,7 +108,7 @@
 <!-- 头部结束 -->
 
 <div class="registered-container">
-    <form th:action="@{/addUser}" th:method="post" class="registered-form">
+    <div class="registered-form">
         <h2>注册</h2>
         <div style="float: left">
             <input type="text" id="username" name="username" placeholder="用户名"
