--- a/src/main/resources/templates/article_test.html
+++ b/src/main/resources/templates/article_test.html
@@ -127,6 +127,9 @@
     </div>
 </div>
 
+<!-- 底部开始 -->
+<footer th:replace="footer.html"></footer>
+<!-- 底部结束 -->
 
 <script type="text/javascript" th:src="@{/static/js/jquery-min.js}"></script>
 
