--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -134,23 +134,22 @@
             contentType: "application/json; charset=utf-8",
             success: function (data) {
                 if (data.result === "1") {
-                    document.getElementById("message-box-text").innerHTML = "登录成功";
-                    //document.getElementById("message-box").style.color = "#d7f7ff";
-                    document.getElementById("message-box").style.color = "#ffffff";
-                    document.getElementById("message-box").style.background = "#1a95ff";
+                    $("#message-box-text").html("登录成功")
+                    $("#message-box").css("color","#ffffff");
+                    $("#message-box").css("background","#1a95ff");
                     setTimeout(function () {
                         window.location.href = "/";
                     }, 2000)
                 } else if (data.result === "0") {
                     //登录失败，用户名或密码错误
-                    document.getElementById("message-box-text").innerHTML = "登录失败，用户名或密码错误";
-                    document.getElementById("message-box").style.background = "#f2dede";
-                    document.getElementById("message-box").style.color = "#a94442";
+                    $("#message-box-text").html("登录失败，用户名或密码错误")
+                    $("#message-box").css("color","#a94442");
+                    $("#message-box").css("background","#f2dede");
                 } else {
                     //登录失败，用户名或密码为null
-                    document.getElementById("message-box-text").innerHTML = "提交失败，用户名、密码为null";
-                    document.getElementById("message-box").style.background = "#f2dede";
-                    document.getElementById("message-box").style.color = "#a94442";
+                    $("#message-box-text").html("提交失败，用户名、密码为null")
+                    $("#message-box").css("color","#a94442");
+                    $("#message-box").css("background","#f2dede");
                 }
                 setTimeout(function () {
                     $('#message-box').slideUp(300);
