--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -46,7 +46,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">
+                        <a class="nav-link" href="/user/login">
                             个人
                         </a>
                     </li>
@@ -75,7 +75,7 @@
                 <a href="">娱乐</a>
             </li>
             <li class="">
-                <a href="/login">个人</a>
+                <a href="/user/login">个人</a>
             </li>
         </ul>
         <!-- 手机导航栏结束 -->
