--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -179,12 +179,12 @@
                         </table>
                         <div class="btn-container">
                             <div class="btn-prev-or-next">
-                                <a th:href="'/user/'+${pageNumPrev}" class="btn btn-primary">
+                                <a th:href="'/user/userIndex/'+${pageNumPrev}" class="btn btn-primary">
                                     上一页
                                 </a>
                             </div>
                             <div class="btn-prev-or-next">
-                                <a th:href="'/user/'+${pageNumNext}" class="btn btn-primary">
+                                <a th:href="'/user/userIndex/'+${pageNumNext}" class="btn btn-primary">
                                     下一页
                                 </a>
                             </div>
