--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -127,57 +127,50 @@
         var username = $("#username").val().trim();
         var password = $("#password").val().trim();
 
-        $.ajax({
-            url: "/loginUserByAjax",
-            dataType: "JSON",
-            data: {
-                "username": username, "password": password
-            },
-            contentType: "application/json; charset=utf-8",
-            success: function (data) {
-                if (data.result === "1") {
-                    $("#message-box-text").html("登录成功");
-                    $("#message-box").css("color","#ffffff");
-                    $("#message-box").css("background","#1a95ff");
-                    setTimeout(function () {
-                        window.location.href = "/";
-                    }, 2000)
-                } else if (data.result === "0") {
-                    //登录失败，用户名或密码错误
-                    $("#message-box-text").html("登录失败，用户名不存在");
-                    $("#message-box").css("color","#a94442");
-                    $("#message-box").css("background","#f2dede");
-                }else if (data.result === "-2") {
-                    //登录失败，用户名或密码错误
-                    $("#message-box-text").html("登录失败，密码错误");
-                    $("#message-box").css("color","#a94442");
-                    $("#message-box").css("background","#f2dede");
-                } else {
-                    //登录失败，用户禁止登录
-                    $("#message-box-text").html("提交失败，用户禁止登录");
-                    $("#message-box").css("color","#a94442");
-                    $("#message-box").css("background","#f2dede");
+        if (username !== "" && password !== "") {
+            $.ajax({
+                url: "/loginUserByAjax",
+                dataType: "JSON",
+                data: {
+                    "username": username, "password": password
+                },
+                contentType: "application/json; charset=utf-8",
+                success: function (data) {
+                    if (data.result === "1") {
+                        $("#message-box-text").html(data.msg);
+                        $("#message-box").css("color", "#ffffff");
+                        $("#message-box").css("background", "#1a95ff");
+                        setTimeout(function () {
+                            window.location.href = "/";
+                        }, 2000)
+                    } else if (data.result === "0") {
+                        //登录失败，用户名或密码错误
+                        $("#message-box-text").html(data.msg);
+                        $("#message-box").css("color", "#a94442");
+                        $("#message-box").css("background", "#f2dede");
+                    }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown) {
+                    alert(XMLHttpRequest.status);
+                    alert(XMLHttpRequest.readyState);
+                    alert(textStatus);
+                    alert(errorThrown)
                 }
-                setTimeout(function () {
-                    $('#message-box').slideUp(300);
-                },1000);
-                if ($("#message-box").is(":hidden")) {
-                    $('#message-box').slideDown(300);
-                } else {
-                    $('#message-box').slideUp(300);
-                }
-                /*$(document).one("click", function () {
-                    $('#message-box').slideUp(300);
-                });
-                e.stopPropagation();*/
-            },
-            error: function (XMLHttpRequest, textStatus, errorThrown) {
-                alert(XMLHttpRequest.status);
-                alert(XMLHttpRequest.readyState);
-                alert(textStatus);
-                alert(errorThrown)
-            }
-        })
+            })
+        } else {
+            $("#message-box-text").html("登录失败，用户名或密码为空");
+            $("#message-box").css("color", "#a94442");
+            $("#message-box").css("background", "#f2dede");
+        }
+        setTimeout(function () {
+            $('#message-box').slideUp(300);
+        }, 1000);
+        if ($("#message-box").is(":hidden")) {
+            $('#message-box').slideDown(300);
+        } else {
+            $('#message-box').slideUp(300);
+        }
+
     }
 </script>
 
